syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;
option go_package = "github.com/zYoma/go-url-shortener/proto";

service Shortener {
    rpc CreateShortURL(CreateShortURLRequest) returns (CreateShortURLResponse);
    rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
    rpc Ping(google.protobuf.Empty) returns (PingResponse);
   
}

message CreateShortURLRequest {
    string url = 1;
}

message CreateShortURLResponse {
    string result = 1;
}

message GetUserURLsRequest {
    string user_id = 1;
}

message GetUserURLsResponse {
    repeated URLs urls = 1;
}

message URLs {
    string short_url = 1;
    string original_url = 2;
}

message PingResponse {
    string message = 1;
}